--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 
                         
             <section class="fundo">
-                <p>
+                <p class="tela">
                     <br>Tenho saudade das cartas</br>
                     <br>Escritas com a própria mão</br>
                     <br>Mandava no mês de Junho</br>
